# foldri.github.io

./: .gitignore  404.html  README.md  __CNAME  convert_notebooks_sem.sh  environment.yml  index.html  mkdocs.yml  pyproject.toml
about/: index.html
cv/: index.html
docs/: CNAME  index.md
docs/about/: index.md
docs/cv/: index.md
docs/fred/: index.md
docs/igli/: index.md
docs/javascripts/: extra.js
docs/research/: index.md
docs/sem/: 1-numpy.md  2-numba.md  3-application_stoch_proc.md  4-optimization.md  5-endogenous_grid_method.md  index.md
docs/stylesheets/: extra.css
docs/teaching/: index.md
javascripts/: extra.js
overrides/: home.html  main.html
overrides/templates/: base.html  home.html
research/: index.html
search/: search_index.json
stylesheets/: extra.css
teaching/: index.html
