[tool.poetry]
name = "website"
version = "0.1.0"
description = "Personal website Frederik Bennhoff hosting personal information, research, code and posts."
authors = ["Frederik Bennhoff <frederik@bennhoff.de>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.32"
pymdown-extensions = "^10.9"
fontawesome-markdown = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
